--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-unicode-segmentation = "1.9.0"
+unicode-segmentation = "1"
+anyhow = "1"
+#regex = "1"
 
 [dev-dependencies]
 more-asserts = "0.2.2"
+
+[[bin]]
+name = "count"
+path = "src/bin/count.rs"
