--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2021"
 [dependencies]
 unicode-segmentation = "1"
 anyhow = "1"
-#regex = "1"
+regex="1.5"
+lazy_static = "1"
+crossbeam-channel = "0.5"
+chrono = "0.4"
+unicode-segmentation = "1.9.0"
 
 [dev-dependencies]
-more-asserts = "0.2.2"
+more-asserts = "0.3"
 
 [[bin]]
 name = "count"
